# stdlinux

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
cpp/: args.cpp  docker-compose.yml
cpp/stream/: args.cpp
cpp/stream/system_call/: write.cpp
rust/stream/: Cargo.toml
rust/stream/src/cat/: main.rs
src/: bell.cpp  daytime.rs  grep.rs  head.rs  hello.cpp  httpd.cpp  ls.rs  mkdir.rs  mmap.cpp  open.cpp  segv.cpp  shell.rs  spawn.rs  trap.rs
src/memory-management/: heap-allocate.cpp
src/process/: fork-and-exec.cpp
src/stream/: cat.cpp  cat2.cpp  head.cpp
src/stream/cat/: cat.cpp
src/stream/grep/: memo.md
src/stream/system_call/: close.cpp  open.cpp
src/stream/wc/: main.rs
test/: foo.txt
