[package]
name = "stream"
version = "0.1.0"
authors = ["Kazuki Matsuo <kazuki.matsuo.728@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.20.0"
getopts = "0.2"

[[bin]]
name = "cat"
path = "src/stream/cat/main.rs"

[[bin]]
name = "wc"
path = "src/wc/main.rs"
[[bin]]
name = "head"
path = "src/head/main.rs"