[package]
authors = ["Kazuki Matsuo <kazuki.matsuo.728@gmail.com>"]
edition = "2018"
name = "stream"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
nix = "0.20.0"
regex = "1.5.4"


[[bin]]
name = "cat"
path = "src/stream/cat/main.rs"

[[bin]]
name = "wc"
path = "src/stream/wc/main.rs"

[[bin]]
name = "head"
path = "src/stream/head/main.rs"

[[bin]]
name = "grep"
path = "src/stream/grep/main.rs"