[package]
authors = ["Kazuki Matsuo <kazuki.matsuo.728@gmail.com>"]
edition = "2018"
name = "stream"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
nix = "0.20.0"
regex = "1.5.4"

[[bin]]
name = "cat"
path = "src/cat.rs"

[[bin]]
name = "wc"
path = "src/wc.rs"

[[bin]]
name = "head"
path = "src/head.rs"

[[bin]]
name = "grep"
path = "src/grep.rs"

[[bin]]
name = "ls"
path = "src/ls.rs"

[[bin]]
name = "mkdir"
path = "src/mkdir.rs"

[[bin]]
name = "spawn"
path = "src/spawn.rs"

[[bin]]
name = "shell"
path = "src/shell.rs"

[[bin]]
name = "trap"
path = "src/trap.rs"
